# sim-rt

./: CMakeLists.txt  README.md
assets/scene/: brdf.ssf  brdf2.ssf  cornell.ssf  mesh.ssf  mirrors.ssf  transformations.ssf  window.ssf
src/: main.cpp
src/app/: app.cpp  app.h
src/hitable/: bvh.cpp  bvh.h  hitable.h  hitablelist.h  ihitable.h  mesh.cpp  mesh.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/hitable/medium/: constantmedium.cpp  constantmedium.h  medium.h
src/hitable/object/: Neues Textdokument.txt  cube.cpp  cube.h  cylinder.cpp  cylinder.h  mesh.cpp  mesh.h  object.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/hitable/organization/: bvh.cpp  bvh.h  hitablelist.cpp  hitablelist.h  iorganization.h  organization.h
src/hitable/transformation/: rotation.cpp  rotation.h  scale.h  transformation.h  translation.cpp  translation.h
src/io/: console.cpp  console.h  image.cpp  image.h  sceneio.cpp  sceneio.h  stringutil.h
src/material/: brdf.h  dielectric.h  diffuselight.h  imaterial.h  isotropic.h  lambertian.h  material.h  metal.h  normal.h
src/math/: algorithm.cpp  algorithm.h  constants.h  util.h  vec3.cpp  vec3.h
src/scene/: camera.h  dofcamera.cpp  dofcamera.h  icamera.h  ray.h  simplecamera.cpp  simplecamera.h
src/spatial/: aabb.cpp  aabb.h
src/texture/: constanttexture.cpp  constanttexture.h  cubemap.h  imagetexture.h  itexture.h  texture.h
src/tracer/: debugtracer.cpp  debugtracer.h  itracer.h  photonmapper.cpp  photonmapper.h  raycaster.cpp  raycaster.h  raytracer.cpp  raytracer.h  tracer.h
src/util/: path.h  string.h
